<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".PlayersActivity">
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="#181818"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textSize="15sp"
        android:textColor="@color/teal_700"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        android:paddingHorizontal="40dp"
        android:gravity="center_horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_info_24"
            android:layout_weight="0.7">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name_online"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/connectButton"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.3"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online_players_title"
        android:paddingHorizontal="20dp"
        android:textSize="25sp"/>
    <ListView
        android:id="@+id/players_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        />
    <TextView
        android:id="@+id/empty_list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_list"
        android:padding="20dp"
        android:textSize="20sp"
        android:gravity="center"/>

</LinearLayout>