<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".HomeActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="#181818"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="162dp"
        android:layout_height="162dp"
        android:background="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/alt_app_logo"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="40dp">

        <Button
            android:id="@+id/newGameHome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#2196F3"
            android:onClick="startNewGame"
            android:text="@string/new_game"
            android:textColor="@color/white" />

        <Button

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="#2196F3"
            android:onClick="getOnlinePlayers"
            android:text="@string/play_online"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/aboutHome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/about"
            android:background="#2196F3"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>