<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold" />
    <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TableRow android:layout_width="match_parent"
                  android:layout_height="wrap_content">

            <TextView
                    android:text="@string/default_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scorePlayer1"
                    android:textAlignment="center"
                    android:layout_weight="0.33"
                    android:textStyle="bold" />

            <TextView
                    android:text="@string/default_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberTies"
                    android:textAlignment="center"
                    android:layout_weight="0.33"
                    android:textStyle="bold" />
            <TextView
                    android:text="@string/default_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scorePlayer2"
                    android:textAlignment="center"
                    android:layout_weight="0.33"
                    android:textStyle="bold" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/x_img"
                        android:id="@+id/imagePlayer1"
                        android:layout_weight="0.33"/>
                <TextView
                    android:id="@+id/playerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"/>
            </LinearLayout>
            <TextView
                    android:text="@string/tie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="0.33"
                    android:layout_marginHorizontal="20dp"/>
            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/o_img"
                    android:id="@+id/imagePlayer2"
                    android:layout_weight="0.33"/>
                <TextView
                    android:id="@+id/playerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.33"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <com.dadm.reto07.BoardView
            android:id="@+id/board"
            android:layout_width="300dp" android:layout_height="300dp"
            android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/info_label"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
            android:id="@+id/newGameMain"
            android:layout_width="219dp"
            android:layout_height="59dp"
            android:background="#2196F3"
            android:text="@string/new_game"
            android:layout_gravity="center"
            android:textColor="@color/white"/>

</LinearLayout>
